--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/x-data-grid": "^5.17.17",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
   },
