--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@mui/material": "^5.11.3",
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/x-data-grid": "^5.17.17",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
